update flutter app template

--- a/.gitignore
+++ b/.gitignore
@@ -97,7 +97,8 @@ unlinked_spec.ds
 **/ios/Flutter/flutter_export_environment.sh
 **/ios/ServiceDefinitions.json
 **/ios/Runner/GeneratedPluginRegistrant.*
-
+/ios/flutter/AppFrameworkInfo.plist
+/ios/flutter/Runner.xcodeproj/project.xcworkspace
 # macOS
 **/macos/Flutter/GeneratedPluginRegistrant.swift
 
