--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,5 @@ app.*.symbols
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
+ios/Flutter/AppFrameworkInfo.plist
+ios/Runner.xcodeproj/project.pbxproj
