--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,9 @@ app.*.symbols
 !/dev/ci/**/Gemfile.lock
 ios/Flutter/AppFrameworkInfo.plist
 ios/Runner.xcodeproj/project.pbxproj
+linux/flutter/generated_plugin_registrant.cc
+linux/flutter/generated_plugin_registrant.h
+linux/flutter/generated_plugins.cmake
+windows/flutter/generated_plugin_registrant.cc
+windows/flutter/generated_plugin_registrant.h
+windows/flutter/generated_plugins.cmake
