--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,27 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  auto_size_text: 3.0.0
+  cached_network_image: 3.2.1
+  chewie: 1.3.4
+  flutter_animate: 1.0.0
+  flutter_cache_manager: 3.3.0
+  font_awesome_flutter: 10.1.0
+  from_css_color: 2.0.0
+  google_fonts: 3.0.1
+  intl: 0.17.0
+  json_path: 0.4.1
+  page_transition: 2.0.4
+  shared_preferences: 2.0.15
+  sqflite: 2.2.0+2
+  timeago: 3.2.2
+  timeline_list: ^0.0.6
+  url_launcher: 6.1.5
+  video_player: 2.4.5
+  video_player_android: 2.3.8
+  video_player_avfoundation: 2.3.5
+  video_player_platform_interface: 5.1.3
+  video_player_web: 2.0.12
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -56,7 +77,13 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/images/
+    - assets/videos/
+    - assets/audios/
+    - assets/lottie_animations/
+    - assets/rive_animations/
+    - assets/pdfs/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
