--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_datetime_picker: ^1.5.1
+  expandable: ^5.0.1
 
 dev_dependencies:
   flutter_test:
