--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_datetime_picker: ^1.5.1
+  firebase_core: ^2.3.0
+  firebase_auth: ^4.1.3
+  fluttertoast: ^8.1.1
+  firebase_database: ^10.0.6
 
 dev_dependencies:
   flutter_test:
