Remove realtime database Add Cloud Firestone Aggiunti name, lastname, email dell'utente nel database

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,8 @@ dependencies:
   firebase_core: ^2.3.0
   firebase_auth: ^4.1.3
   fluttertoast: ^8.1.1
-  firebase_database: ^10.0.6
   expandable: ^5.0.1
+  cloud_firestore: ^4.1.0
 
 dev_dependencies:
   flutter_test:
