--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,13 +43,13 @@ dependencies:
   image_picker: ^0.8.6
   firebase_storage: ^11.0.6
   permission_handler: ^10.2.0
-
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
   auto_size_text: 3.0.0
   cached_network_image: 3.2.1
-  chewie: 1.3.4
+  chewie: ^1.3.5
   flutter_animate: 1.0.0
   flutter_cache_manager: 3.3.0
   font_awesome_flutter: 10.1.0
@@ -63,9 +63,9 @@ dev_dependencies:
   timeago: 3.2.2
   timeline_list: ^0.0.6
   url_launcher: 6.1.5
-  video_player: 2.4.5
+  video_player: ^2.4.8
   video_player_android: 2.3.8
-  video_player_avfoundation: 2.3.5
+  video_player_avfoundation: ^2.3.7
   video_player_platform_interface: 5.1.3
   video_player_web: 2.0.12
 
