--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^0.8.6
   firebase_storage: ^11.0.6
   permission_handler: ^10.2.0
+  local_auth: ^2.1.2
   
 dev_dependencies:
   flutter_test:
