--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   image_picker: ^0.8.6
   firebase_storage: ^11.0.6
   permission_handler: ^10.2.0
+  video_thumbnail: ^0.5.3
+  path_provider: ^2.0.11
+  text_to_speech: ^0.2.3
   
 dev_dependencies:
   flutter_test:
