--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   video_thumbnail: ^0.5.3
   path_provider: ^2.0.11
   text_to_speech: ^0.2.3
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   
 dev_dependencies:
   flutter_test:
