--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   syncfusion_flutter_charts: ^20.3.59
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  percent_indicator: 4.2.2
   
 dev_dependencies:
   flutter_test:
