--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,9 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   percent_indicator: 4.2.2
-  
+  carousel_slider: ^4.2.1
+  flutter_tags: ^0.4.9+1
+  animated_custom_dropdown: 1.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
