--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ dependencies:
   calendar_date_picker2: ^0.3.5
   table_calendar: 3.0.6
   panara_dialogs: ^0.1.4
-
+  dart_sentiment: ^0.0.9
 dev_dependencies:
   flutter_test:
     sdk: flutter
