update quiz and layouts

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -53,5 +53,12 @@
 	<true/>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>this application needs access to the photos</string>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+    <true/>
+    <key>UIFileSharingEnabled</key>
+    <true/>
+	<key>MFMailComposeViewController</key>
+    <true/>
+	
 </dict>
 </plist>
