--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
 
     <!-- Permissions options for the `biometric` group -->
     <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
-
+    <queries>
+    <intent>
+      <action android:name="android.intent.action.SENDTO" />
+      <data android:scheme="mailto" />
+    </intent>
+  </queries>
    <application
         android:label="mindcare"
         android:name="${applicationName}"
