--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   telephony: ^0.2.0
   geolocator: ^8.2.0
   geocoding: ^2.0.4
+  flutter_custom_clippers: ^2.1.0
+  flutter_svg: ^1.1.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
