--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -59,6 +59,10 @@
     <true/>
 	<key>MFMailComposeViewController</key>
     <true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>this application needs access to the location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>this application needs access to the location</string>
 	
 </dict>
 </plist>
