--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -51,8 +51,10 @@
 	<false/>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs access to the camera to take photos.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>this application needs access to the photos</string>
+	<string>This app needs access to photos.</string>
 	<key>LSSupportsOpeningDocumentsInPlace</key>
     <true/>
     <key>UIFileSharingEnabled</key>
