--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,10 @@ dependencies:
   flutter_svg: ^1.1.6
   geolocator: ^9.0.2
   geocoding: ^2.0.5
-  
+  flutter_local_notifications: ^9.7.0
+  timezone: ^0.8.0
+  flutter_native_timezone: ^2.0.0
+  rxdart: ^0.27.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
