update icon launcher

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,10 +101,16 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.1
+  flutter_launcher_icons: ^0.11.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
+  adaptive_icon_foreground: "assets/images/logo_foreground.png"
+  adaptive_icon_background: "#ffffff"
 # The following section is specific to Flutter packages.
 flutter:
 
