--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
    <application
-        android:label="mindcare"
+        android:label="MindCare"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
