--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,5 +37,40 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+    target.build_configurations.each do |config|
+      # You can remove unused permissions here
+      # e.g. when you don't need camera permission, just add 'PERMISSION_CAMERA=0'
+      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
+        '$(inherited)',
+        ## dart: PermissionGroup.calendar
+
+        ## dart: PermissionGroup.reminders
+
+        ## dart: PermissionGroup.contacts
+
+        ## dart: PermissionGroup.camera
+        
+        ## dart: PermissionGroup.microphone
+        
+        ## dart: PermissionGroup.speech
+        
+        ## dart: PermissionGroup.photos
+        'PERMISSION_PHOTOS=1',
+        ## dart: [PermissionGroup.location, PermissionGroup.locationAlways, PermissionGroup.locationWhenInUse]
+        'PERMISSION_LOCATION=1'
+        ## dart: PermissionGroup.notification
+        'PERMISSION_NOTIFICATIONS=1'
+        ## dart: PermissionGroup.mediaLibrary
+        'PERMISSION_MEDIA_LIBRARY=1',
+        ## dart: PermissionGroup.sensors
+
+        ## dart: PermissionGroup.bluetooth
+
+        ## dart: PermissionGroup.appTrackingTransparency
+        
+        ## dart: PermissionGroup.criticalAlerts
+        
+      ]
+    end
   end
 end
