--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   hive_flutter: ^1.1.0
   percent_indicator: ^4.2.2
   carousel_slider: ^4.2.1
-  flutter_tags: ^1.0.0-nullsafety.1
+  flutter_tags: ^0.4.9+1
   animated_custom_dropdown: ^1.2.2
   group_button: ^5.2.2
   calendar_date_picker2: ^0.3.5
