--- a/ios/Podfile
+++ b/ios/Podfile
@@ -57,9 +57,9 @@ post_install do |installer|
         ## dart: PermissionGroup.photos
         'PERMISSION_PHOTOS=1',
         ## dart: [PermissionGroup.location, PermissionGroup.locationAlways, PermissionGroup.locationWhenInUse]
-        'PERMISSION_LOCATION=1'
+        'PERMISSION_LOCATION=1',
         ## dart: PermissionGroup.notification
-        'PERMISSION_NOTIFICATIONS=1'
+        'PERMISSION_NOTIFICATIONS=1',
         ## dart: PermissionGroup.mediaLibrary
         'PERMISSION_MEDIA_LIBRARY=1',
         ## dart: PermissionGroup.sensors
